# FileSync

./: .gitignore  LICENSE  filesync.py  pyproject.toml
Misc/: CommandLineHandler.py  DatabaseManager.py  InitializationManager.py
Model/: FileSystemEntity.py
