[tool.poetry]
name = "FileSync"
version = "0.1.0"
description = ""
authors = ["Andrey Rudenko <andrey.rudenko@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"
watchdog = "^0.10.2"
sqlalchemy = "^1.3.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
